--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1879,6 +1879,16 @@ a.post-category.absolute {
     margin-top: 0;
 }
 
+.newsletter-form .alert {
+    text-align: center;
+    margin-bottom: 0;
+    padding: .75rem;
+}
+
+.newsletter-form .alert p {
+    margin-bottom: 0;
+}
+
 /* 8. SIDEBAR
 ================================================== */
 .sidebar .widget.mb-0 {
