--- a/public/css/style.css
+++ b/public/css/style.css
@@ -134,6 +134,10 @@ a:hover {
     color: #000;
 }
 
+.post-category:hover {
+    color: white !important;
+}
+
 a.read-more {
     color: #dc3545;
     font-weight: 700;
@@ -914,6 +918,7 @@ a.post-category {
     line-height: 1.2;
     color: #fff;
     background: #dc3545;
+    padding: 8px;
 }
 
 a.post-category.white:hover {
@@ -2041,6 +2046,10 @@ a.post-category.absolute {
     display: -webkit-flex;
     display: flex;
     margin-bottom: 38px;
+}
+
+.top-author img {
+    height: 5rem;
 }
 
 .top-author .info {
