--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1392,6 +1392,28 @@ a.post-category.absolute {
     width: 100%;
 }
 
+.comment-ajax-message_success,
+.comment-ajax-message_error {
+    width: 100%;
+    padding: 10px;
+    color: white;
+    display: none;
+    text-align: center;
+}
+
+.comment-ajax-message_success {
+    background: #1d643b;
+}
+
+.comment-ajax-message_error {
+    background: #90111A;
+}
+
+.g-recaptcha {
+
+}
+
+
 .post-image {
     width: 100%;
     margin-bottom: 60px;
