--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,6 +129,33 @@ html, body {
     height: 100%;
 }
 
+.loading {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(102, 102, 102,0.2);
+    z-index: 99;
+    display: none;
+}
+.loading:after {
+    content: "";
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    top: -30px;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    margin: auto;
+    border: 6px solid #3498db;
+    border-top: 6px dotted #3498db;
+    border-bottom: 6px dotted #3498db;
+    border-radius: 50%;
+    animation: loading 2s infinite;
+}
+
 a {
     color: #dc3545;
 }
