--- a/public/css/style.css
+++ b/public/css/style.css
@@ -380,9 +380,9 @@ ol, ul {
 /* Input form */
 .form-control {
     box-shadow: none;
-    border: 1px solid transparent;
+    border: 1px solid #ced4da;
     padding: 15px 20px;
-    background: #f0f1f4;
+    background: #ffffff;
     font-size: 14px;
     border-radius: 2px;
 }
@@ -1042,6 +1042,8 @@ a.post-category.absolute {
     font-size: 12px;
 }
 
+
+
 .post-meta span {
     font-family: "Poppins", sans-serif;
     margin-right: 8px;
@@ -1070,7 +1072,7 @@ a.post-category.absolute {
 }
 
 .post-author a:hover {
-    color: #dc3545;
+    color: #dc3545 !important;
 }
 
 .post-overlay-wrapper {
@@ -1131,6 +1133,10 @@ a.post-category.absolute {
 .post-overlay-wrapper .post-title a, .post-overlay-wrapper .posted-time {
     color: #fff;
     word-break: initial;
+}
+
+.post-overlay-wrapper .post-title a:hover {
+    color: #dc3545;
 }
 
 .thumb-float-style .post-category {
@@ -1446,7 +1452,7 @@ a.post-category.absolute {
 }
 
 .post-featured-style .post-content {
-    padding: 30px;
+    padding: 15px;
     transition: all .3s ease;
     position: absolute;
     z-index: 9;
@@ -2141,7 +2147,7 @@ a.post-category.absolute {
 }
 
 .featured-slider .post-content {
-    padding: 30px;
+    padding: 15px;
     transition: all .3s ease;
     position: absolute;
     z-index: 9;
@@ -2266,7 +2272,7 @@ a.post-category.absolute {
 .custom-file label{
     font-size: 20px;
 }
-
+.post-edit-container .ql-editor,
 .post-container .ql-editor {
     height: 400px;
 }
@@ -2813,7 +2819,7 @@ a {
 }
 
 #modalUserAccount .modal-header img {
-    width: 150px;
+    width: 200px;
     border-radius: 50%;
 }
 
