--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2511,6 +2511,7 @@ a.post-category.absolute {
 
 .top-author img {
     height: 5rem;
+    width: 5rem;
 }
 
 .top-author .info {
@@ -3219,6 +3220,7 @@ a {
 
     .top-author img {
         height: 3rem;
+        width: 3rem;
     }
 
     .post-title.title-sm {
