--- a/public/css/style.css
+++ b/public/css/style.css
@@ -219,6 +219,10 @@ a.read-more:hover {
     position: relative;
 }
 
+.section-padding.login-signup {
+    padding: 10px 0;
+}
+
 .section-sm {
     padding: 30px 0;
 }
