--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,7 +138,7 @@ html, body {
     top: 0;
     left: 0;
     background: rgba(102, 102, 102,0.2);
-    z-index: 99;
+    z-index: 999999;
     display: none;
 }
 .loading:after {
@@ -1663,6 +1663,10 @@ a.post-category.absolute {
     display: inline-block;
 }
 
+.share-icons > li:focus {
+    outline: none;
+}
+
 .share-icons > li:not(:last-child) {
     margin-right: 8px;
 }
@@ -2839,9 +2843,14 @@ a {
 
 #modalUserAccount .modal-update-image {
     position: absolute;
-    left: 55%;
-    top: 130px;
+    /*left: 55%;*/
+    /*top: 130px;*/
+    bottom: 0;
     z-index: 1;
+}
+
+.tag-margin {
+    margin-top: 10px;
 }
 
 #modalUserAccount .modal-image {
