Admin panel delete button modals

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -442,3 +442,8 @@ a.action:first-child{
 .preview-content p {
     font-size: 18px;
 }
+
+.btn.admin-delete-button {
+    background: transparent;
+    padding-top: 0;
+}
