--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3200,6 +3200,50 @@ a {
 
 /* Mobile */
 @media (max-width: 575px) {
+
+    .post-container {
+        height: 175vh;
+    }
+
+    .post-container label,
+    .post-header {
+        font-size: 16px;
+    }
+
+    .back-arrow {
+        font-size: 15px;
+    }
+
+    div.tagsinput {
+        height: 40px !important;
+    }
+
+    .author-profile p {
+        font-size: 10px;
+    }
+
+    .author-profile h5 {
+        font-size: 11px;
+    }
+
+    .author-create-post,
+    .author-edit-post,
+    .author-profile .col-3 {
+        font-size: 12px;
+    }
+
+    .form-control {
+        padding: 10px 10px;
+    }
+
+    .custom-file label {
+        font-size: 14px;
+    }
+
+    .post-subject-additional {
+        font-size: 13px;
+    }
+
     .username-button {
         padding: 0.5rem 1rem !important;
     }
