Mail adress from

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2909,6 +2909,13 @@ a {
 }
 
 
+.news-style-two .other-football img {
+    width: 163px;
+    height: 91px;
+}
+
+
+
 /* 12. RESPONSIVE STYLES
 ================================================== */
 /* Medium Devices, Desktops */
